--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <form class="login-form">
 
         <div class="login_header">
-            <img src="./images/festus.png" alt="festus icon">
+            <img src="./imagens/festus.png" alt="festus icon">
             <h1>MEMORY GAME</h1>
         </div>
 
